# fs-chatAgent

./: README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: Error.tsx  FileUpload.css  FileUpload.tsx  Home.css  Home.tsx
frontend/src/services/: api.tsx
local-agent/: .env.example  .gitignore  README.md  pyproject.toml
local-agent/src/agent_app/: chunking.py  config.py  db.py  embedding.py  main.py  readers.py  vectorstore.py
local-agent/src/agent_app/graphs/: index_graph.py  query_graph.py
local-agent/src/local_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
local-agent/tests/: conftest.py  test_index_api.py  test_readers_formats.py  test_search_api.py  test_web_search_api.py
